Cambiado options por Options en el nombre de clase.

--- a/options.ui
+++ b/options.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>options</class>
- <widget class="QDialog" name="options">
+ <class>Options</class>
+ <widget class="QDialog" name="Options">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -154,7 +154,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>options</receiver>
+   <receiver>Options</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -170,7 +170,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>options</receiver>
+   <receiver>Options</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
