--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -84,7 +84,11 @@
             </widget>
            </item>
            <item row="0" column="1">
-            <widget class="QLineEdit" name="LEday"/>
+            <widget class="QLineEdit" name="LEday">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label">
@@ -280,7 +284,7 @@
   </action>
   <action name="actionAcerca_de_Qt">
    <property name="text">
-    <string>Acerca de Qt</string>
+    <string>Acerca &amp;de Qt</string>
    </property>
   </action>
  </widget>
