Implementación de cerrar el programa y ocultar a la bandeja del sistema. Aún falta crear una opción para darle la opción al usuario de elegir.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -271,6 +271,9 @@
    <property name="text">
     <string>&amp;Salir</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
   </action>
   <action name="actionConfigurar">
    <property name="text">
@@ -290,22 +293,5 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections>
-  <connection>
-   <sender>actionSalir</sender>
-   <signal>triggered()</signal>
-   <receiver>MainWindow</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>199</x>
-     <y>149</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
