--- a/options.ui
+++ b/options.ui
@@ -134,7 +134,15 @@
        </widget>
       </item>
       <item row="6" column="1">
-       <widget class="QTimeEdit" name="TEtimeMaxVol"/>
+       <widget class="QTimeEdit" name="TEtimeMaxVol">
+        <property name="minimumTime">
+         <time>
+          <hour>0</hour>
+          <minute>0</minute>
+          <second>1</second>
+         </time>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -165,7 +173,15 @@
       </widget>
      </item>
      <item>
-      <widget class="QTimeEdit" name="TEtimeSleep"/>
+      <widget class="QTimeEdit" name="TEtimeSleep">
+       <property name="minimumTime">
+        <time>
+         <hour>0</hour>
+         <minute>0</minute>
+         <second>1</second>
+        </time>
+       </property>
+      </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer">
@@ -233,8 +249,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>322</x>
-     <y>388</y>
+     <x>266</x>
+     <y>376</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -249,8 +265,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>322</x>
-     <y>388</y>
+     <x>266</x>
+     <y>376</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
